// https://dbml.dbdiagram.io/docs

Project app {
    database_type: 'SQLite'
    note: 'A remake of Honk, an IOS-exclusive messaging app ^_^'
}

Table users {
    id integer [pk, increment]
    username varchar [not null, unique]
    pfp varchar [not null, default: '1.jpg']
    password varchar [not null]
    permission_id int [not null, default: 1]

    // records (id, username, password, permission_id) {
    //     1, "ADMIN", "1.jpg", "admin", 2
    // }
}

Table permissions {
    id integer [pk, increment]
    name varchar [not null, unique]

    // records (id, name) {
    //     1, "user"
    //     2, "admin"
    // }
}
ref: users.permission_id > permissions.id [delete: set default]

Table friends {
    user1 integer [not null]
    user2 integer [not null]

    Indexes {
        (user1,user2) [unique]
    }
}
ref: friends.user1 > users.id [delete: cascade]
ref: friends.user2 > users.id [delete: cascade]

Table messages {
    id integer [pk, increment]
    sender_id integer [not null]
    room varchar [not null]
    sent_at datetime [not null, default: "CURRENT_TIMESTAMP", note:"YYYY-MM-DD HH:mm:SS"]
    message varchar [not null]

    note: "UNIQUE (sender_id,room)"
}
ref: messages.sender_id > users.id [delete: cascade]